--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,14 +1,11 @@
 @import '../../styles/variables';
 
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: $margin-m;
+  margin: $margin-s 0;
 
   &__text {
     font-size: $font-s;
